test/error/throw_on_class_notag.morpho
// Calling throw on the class without a tag

Error.throw("Can't foo foos.")
// expect: Error 'Err': Can't foo foos.
